--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "polygon-next",
+  "name": "nft-marketplaces",
   "version": "0.1.0",
   "private": true,
+
+  "engines": {
+    "node": "14.15.4",
+    "npm": "7.21.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "heroku-postbuild": "npm run build",
     "lint": "next lint"
   },
