--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p $PORT",
-    "heroku-postbuild": "npm run build",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
